8233922: Service binding augments module graph with observable incubator modules
Reviewed-by: mchung